--- a/weddevlab/3.html
+++ b/weddevlab/3.html
@@ -56,7 +56,7 @@
         <a href="records.html">Records</a>
       </div>
       <div class="text">
-        <a href="">More</a>
+        <a href="library.html">library</a>
       </div>
 
 
